--- a/Resources/Prototypes/Entities/Objects/Devices/payload.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/payload.yml
@@ -24,6 +24,10 @@
   parent: BasePayload
   id: ExplosivePayload
   components:
+  - type: Tag
+    tags:
+    - Payload
+    - PayloadExplosion
   - type: Sprite
     sprite: Objects/Devices/payload.rsi
     state: payload-explosive-armed
